# image_upload_site

./: Cargo.toml  README.md
crates/server/: Cargo.toml
crates/server/src/: config.rs  errors.rs  lib.rs  main.rs
src/: main.rs
src/data_models/: user.rs
src/templates/: index.rs  user.rs
