[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "webserver"
path = "src/main.rs"

# Dependencies for the engine and the browser go here
[dependencies]
axum = "0.6.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1.25.0", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # For serialization/deserialization.
    "js",                # For WASM.
]}
